--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "daemonize-process": "^1.0.7",
     "detect-rpi": "^1.2.0",
     "ps-node": "^0.1.6",
     "winston": "^2.4.0",
