--- a/config.json
+++ b/config.json
@@ -6,5 +6,6 @@
         "filename": "easyio-monitor.log",
         "maxFiles": 10
     },
-    "interval": 5
+    "interval": 5,
+    "restartCmd": "easyio"
 }
