--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "easyio-monitor",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "daemonize-process": "^1.0.7",
-    "detect-rpi": "^1.2.0",
-    "ps-node": "^0.1.6",
-    "winston": "^2.4.0",
-    "winston-daily-rotate-file": "^1.7.2"
-  }
+    "name": "easyio-monitor",
+    "version": "1.0.0",
+    "description": "",
+    "main": "easyio-monitor.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "bin": {
+        "easyio-monitor": "./bin/easyio-monitor"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "daemonize-process": "^1.0.7",
+        "detect-rpi": "^1.2.0",
+        "ps-node": "^0.1.6",
+        "winston": "^2.4.0",
+        "winston-daily-rotate-file": "^1.7.2"
+    }
 }
